snapshots/syntax/library/statements/beep/multiple_beep_statements.snap
---
source: src/syntax/library/statements/system_interaction/beep.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: BeepStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: BeepKeyword
                  text: Beep
                - kind: Newline
                  text: "\n"
            - kind: BeepStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: BeepKeyword
                  text: Beep
                - kind: Newline
                  text: "\n"
            - kind: BeepStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: BeepKeyword
                  text: Beep
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
